<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="0dp"
    tools:context="com.ajspeller.courtcounter.MainActivity"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/team_a_label"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/score_label"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/score_team_a"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/team_fouls_label"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/teamfouls_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/team_fouls_team_a"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/timeouts_label"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/timeouts_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/timeouts_team_a"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/team_a_three_pointer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="threePointsTeamA"
            android:text="@string/three_pointer_label"/>

        <Button
            android:id="@+id/team_a_two_pointer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="twoPointsTeamA"
            android:text="@string/two_pointer_label"/>

        <Button
            android:id="@+id/team_a_one_pointer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="freeThrowTeamA"
            android:text="@string/free_throw_label"/>

        <Button
            android:id="@+id/team_a_team_foul_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="teamFoulTeamA"
            android:text="@string/team_foul_btn_label"/>

        <Button
            android:id="@+id/team_a_timeout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="timeoutTeamA"
            android:text="@string/timeout_btn_label"/>

        <Button
            android:id="@+id/team_a_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="teamAReset"
            android:text="@string/reset_btn_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/team_b_label"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/score_label"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/score_team_a"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/team_fouls_label"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/teamfouls_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/team_fouls_team_a"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/timeouts_label"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/timeouts_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/timeouts_team_a"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/team_b_three_pointer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="threePointsTeamB"
            android:text="@string/three_pointer_label"/>

        <Button
            android:id="@+id/team_b_two_pointer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="twoPointsTeamB"
            android:text="@string/two_pointer_label"/>

        <Button
            android:id="@+id/team_b_one_pointer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="freeThrowTeamB"
            android:text="@string/free_throw_label"/>

        <Button
            android:id="@+id/team_b_team_foul_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="teamFoulTeamB"
            android:text="@string/team_foul_btn_label"/>

        <Button
            android:id="@+id/team_b_timeout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="timeoutTeamB"
            android:text="@string/timeout_btn_label"/>

        <Button
            android:id="@+id/team_b_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="teamBReset"
            android:text="@string/reset_btn_label"/>

    </LinearLayout>
</LinearLayout>
